Changes w.r.t 3-1-0-4:
- SAGE patches for gcc 4.4
- fixed bug in ring change during tail reduction
- new libs: binresol.lib, trial.lib
- NTL: update to version 5.5.1
- tail reduction for coeffcients also from Z/m, Z/p^n, Z/2^m (trac 137)

Changes w.r.t 3-1-0-3:
- 3-1-0-4: Wed Jun 10 2009
- tail reduction for coeffs from Z (trac 137)
- code cleanup for gcc 4.3
- more updates/fixes to presolve.lib, normal.lib
- minor updates

Changes w.r.t 3-1-0-2:
- 3-1-0-3: Mon May 25 2009
- SAGE patches
- test for homogeneity nowe consistent (see Tst/Short/bug_homog)
- presolve::elimpart improved (see Tst/Short/bug_presolve)
- pointid.lib added
- dmod.lib extended (operatorModulo)
- normal.lib improved (matrix orderings etc.)
- minor updates

Changes w.r.t 3-1-0-1:
- 3-1-0-2 Wed May  6 12:34:23 CEST 2009
- TMPDIR causes problems on MacOsX builds (or fails): renamed to SI_TMPDIR
- better error handling in assigning qring
- attributes which depend on the ring: cleanup fixed (see Tst/Short/bug_tr134)
- minor updates

Changes w.r.t 3-1-0:
- 3-1-0-1 Tue Apr 28 20:11:22 CEST 2009
- reduction was not complete in some cases fixed (char 0, qring, module, ordering (c,...))
  (see Tst/Short/bug_tr132)
- better test for arguments of elim (check for old syntax)
  (see elim.lib, tr 133)
- minor doc updates
